# text-only-scanner

./: README.md  setup.cfg
.github/workflows/: ci.yml  release.yml
fail_folder/: encrypted_text.txt  fail-doc2.txt  message.xml  user.xml
scripts/: run_scan.py
tests/: test_detector.py
text_only_scanner/: __init__.py  detector.py
