[metadata]
name = text_only_scanner
version = 0.1.0
description = Text-only file scanner
long_description = file: README.md
long_description_content_type = text/markdown
author = Your Name
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
python_requires = >=3.8

[options.entry_points]
console_scripts =
    text-only-scanner = text_only_scanner.cli:cli_entry
